exports[`no-console-spaces > invalid(1): console.log(\"abc\", \" def \", \"ghi\"); 1`] = `

  1 | console.log("abc", " def ", "ghi");

`;

exports[`no-console-spaces > invalid(1): console.log(\"abc\", \" def \", \"ghi\"); 2`] = `

Message:
> 1 | console.log("abc", " def ", "ghi");
    |                     ^ Do not use leading space between \`console.log\` parameters.

Output:
  1 | console.log("abc", "def ", "ghi");

`;

exports[`no-console-spaces > invalid(1): console.log(\"abc\", \" def \", \"ghi\"); 3`] = `

Message:
> 1 | console.log("abc", " def ", "ghi");
    |                         ^ Do not use trailing space between \`console.log\` parameters.

Output:
  1 | console.log("abc", " def", "ghi");

`;

exports[`no-console-spaces > invalid(10): console.warn(\"_\", \" warn \", \"_\") 1`] = `

  1 | console.warn("_", " warn ", "_")

`;

exports[`no-console-spaces > invalid(10): console.warn(\"_\", \" warn \", \"_\") 2`] = `

Message:
> 1 | console.warn("_", " warn ", "_")
    |                    ^ Do not use leading space between \`console.warn\` parameters.

Output:
  1 | console.warn("_", "warn ", "_")

`;

exports[`no-console-spaces > invalid(10): console.warn(\"_\", \" warn \", \"_\") 3`] = `

Message:
> 1 | console.warn("_", " warn ", "_")
    |                         ^ Do not use trailing space between \`console.warn\` parameters.

Output:
  1 | console.warn("_", " warn", "_")

`;

exports[`no-console-spaces > invalid(11): console.error(\"_\", \" error \", \"_\") 1`] = `

  1 | console.error("_", " error ", "_")

`;

exports[`no-console-spaces > invalid(11): console.error(\"_\", \" error \", \"_\") 2`] = `

Message:
> 1 | console.error("_", " error ", "_")
    |                     ^ Do not use leading space between \`console.error\` parameters.

Output:
  1 | console.error("_", "error ", "_")

`;

exports[`no-console-spaces > invalid(11): console.error(\"_\", \" error \", \"_\") 3`] = `

Message:
> 1 | console.error("_", " error ", "_")
    |                           ^ Do not use trailing space between \`console.error\` parameters.

Output:
  1 | console.error("_", " error", "_")

`;

exports[`no-console-spaces > invalid(2): console.error(\n\ttheme.error('✗'),\n\t'Verifying \"packaging\" fixture\\n ',\n\ttheme.error(errorMessage)\n); 1`] = `

  1 | console.error(
  2 | 	theme.error('✗'),
  3 | 	'Verifying "packaging" fixture\\n ',
  4 | 	theme.error(errorMessage)
  5 | );

`;

exports[`no-console-spaces > invalid(2): console.error(\n\ttheme.error('✗'),\n\t'Verifying \"packaging\" fixture\\n ',\n\ttheme.error(errorMessage)\n); 2`] = `

Message:
  1 | console.error(
  2 | 	theme.error('✗'),
> 3 | 	'Verifying "packaging" fixture\\n ',
    | 	                                ^ Do not use trailing space between \`console.error\` parameters.
  4 | 	theme.error(errorMessage)
  5 | );

Output:
  1 | console.error(
  2 | 	theme.error('✗'),
  3 | 	'Verifying "packaging" fixture\\n',
  4 | 	theme.error(errorMessage)
  5 | );

`;

exports[`no-console-spaces > invalid(3): console.log(\n\t'abc',\n\t'def ',\n\t'ghi'\n); 1`] = `

  1 | console.log(
  2 | 	'abc',
  3 | 	'def ',
  4 | 	'ghi'
  5 | );

`;

exports[`no-console-spaces > invalid(3): console.log(\n\t'abc',\n\t'def ',\n\t'ghi'\n); 2`] = `

Message:
  1 | console.log(
  2 | 	'abc',
> 3 | 	'def ',
    | 	    ^ Do not use trailing space between \`console.log\` parameters.
  4 | 	'ghi'
  5 | );

Output:
  1 | console.log(
  2 | 	'abc',
  3 | 	'def',
  4 | 	'ghi'
  5 | );

`;

exports[`no-console-spaces > invalid(4): console.log(\"_\", \" leading\", \"_\") 1`] = `

  1 | console.log("_", " leading", "_")

`;

exports[`no-console-spaces > invalid(4): console.log(\"_\", \" leading\", \"_\") 2`] = `

Message:
> 1 | console.log("_", " leading", "_")
    |                   ^ Do not use leading space between \`console.log\` parameters.

Output:
  1 | console.log("_", "leading", "_")

`;

exports[`no-console-spaces > invalid(5): console.log(\"_\", \"trailing \", \"_\") 1`] = `

  1 | console.log("_", "trailing ", "_")

`;

exports[`no-console-spaces > invalid(5): console.log(\"_\", \"trailing \", \"_\") 2`] = `

Message:
> 1 | console.log("_", "trailing ", "_")
    |                           ^ Do not use trailing space between \`console.log\` parameters.

Output:
  1 | console.log("_", "trailing", "_")

`;

exports[`no-console-spaces > invalid(6): console.log(\"_\", \" leading and trailing \", \"_\") 1`] = `

  1 | console.log("_", " leading and trailing ", "_")

`;

exports[`no-console-spaces > invalid(6): console.log(\"_\", \" leading and trailing \", \"_\") 2`] = `

Message:
> 1 | console.log("_", " leading and trailing ", "_")
    |                   ^ Do not use leading space between \`console.log\` parameters.

Output:
  1 | console.log("_", "leading and trailing ", "_")

`;

exports[`no-console-spaces > invalid(6): console.log(\"_\", \" leading and trailing \", \"_\") 3`] = `

Message:
> 1 | console.log("_", " leading and trailing ", "_")
    |                                        ^ Do not use trailing space between \`console.log\` parameters.

Output:
  1 | console.log("_", " leading and trailing", "_")

`;

exports[`no-console-spaces > invalid(7): console.log(\"_\", \" log \", \"_\") 1`] = `

  1 | console.log("_", " log ", "_")

`;

exports[`no-console-spaces > invalid(7): console.log(\"_\", \" log \", \"_\") 2`] = `

Message:
> 1 | console.log("_", " log ", "_")
    |                   ^ Do not use leading space between \`console.log\` parameters.

Output:
  1 | console.log("_", "log ", "_")

`;

exports[`no-console-spaces > invalid(7): console.log(\"_\", \" log \", \"_\") 3`] = `

Message:
> 1 | console.log("_", " log ", "_")
    |                       ^ Do not use trailing space between \`console.log\` parameters.

Output:
  1 | console.log("_", " log", "_")

`;

exports[`no-console-spaces > invalid(8): console.debug(\"_\", \" debug \", \"_\") 1`] = `

  1 | console.debug("_", " debug ", "_")

`;

exports[`no-console-spaces > invalid(8): console.debug(\"_\", \" debug \", \"_\") 2`] = `

Message:
> 1 | console.debug("_", " debug ", "_")
    |                     ^ Do not use leading space between \`console.debug\` parameters.

Output:
  1 | console.debug("_", "debug ", "_")

`;

exports[`no-console-spaces > invalid(8): console.debug(\"_\", \" debug \", \"_\") 3`] = `

Message:
> 1 | console.debug("_", " debug ", "_")
    |                           ^ Do not use trailing space between \`console.debug\` parameters.

Output:
  1 | console.debug("_", " debug", "_")

`;

exports[`no-console-spaces > invalid(9): console.info(\"_\", \" info \", \"_\") 1`] = `

  1 | console.info("_", " info ", "_")

`;

exports[`no-console-spaces > invalid(9): console.info(\"_\", \" info \", \"_\") 2`] = `

Message:
> 1 | console.info("_", " info ", "_")
    |                    ^ Do not use leading space between \`console.info\` parameters.

Output:
  1 | console.info("_", "info ", "_")

`;

exports[`no-console-spaces > invalid(9): console.info(\"_\", \" info \", \"_\") 3`] = `

Message:
> 1 | console.info("_", " info ", "_")
    |                         ^ Do not use trailing space between \`console.info\` parameters.

Output:
  1 | console.info("_", " info", "_")

`;
